--- a/index.html
+++ b/index.html
@@ -34,57 +34,10 @@
 									</header>
 									<span class="image featured"><img src="images/pic04.jpg" alt="" /></span>
 									<h3>What we do</h3>
-									<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
-									ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-									sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-									magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-									Curabitur leo nibh, rutrum eu malesuada in tristique</p>
-									<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat
-									Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit ligula
-									vel quam viverra sit amet mollis tortor congue. Sed quis mauris sit amet
-									magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada in,
-									tristique Curabitur leo nibh, rutrum eu malesuada  in, tristique
-									at erat lorem ipsum dolor sit amet lorem ipsum sed consequat magna
-									tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros consequat
-									magna tempus</p>
-									<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
-									ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-									sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-									magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-									Curabitur leo nibh, rutrum eu malesuada in tristique</p>
-									<h3>Accumsan lorem ipsum veroeros</h3>
-									<p>Consequat Phasellus laoreet massa id in, tristique at erat lorem
-									ipsum dolor sit amet lorem ipsum sed consequat magna tempus veroeros
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-									mollis tortor congue. Sed quis mauris sit amet magna.</p>
-									<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
-									ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-									sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-									magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-									Curabitur leo nibh, rutrum eu malesuada in tristique</p>
-									<h3>Ligula suspcipit fusce veroeros</h3>
-									<p>Nullam dolore etiam sed massa id in, tristique at erat lorem
-									ipsum dolor sit amet lorem ipsum sed consequat magna tempus veroeros
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-									mollis tortor congue. Sed quis mauris sit amet magna.</p>
+									<p>DITLE is a strategic educational initiative by the University of Cincinnati (UC) to prepare Cincinnati high school students for post‐secondary education and careers in Information Technology. The program is funded by the National Science Foundation and is implemented by a collaborative effort between UC’s School of Information Technology, UC’s School of Education, and partner high schools in the Cincinnati area.
+                                       The DITLE Summer program is a 3 week intensive summer IT day camp designed to give students a solid foundation in computer fundamentals, computer application development, database and networking concepts. The program is a hands on, project based, team oriented learning experience at the University of Cincinnati campus using UC state of the art equipment and instructors.
+                                       This program is offered at no charge to students.  All materials and equipment will be provided.  Transportation from the participating high school to the University of Cincinnati and back from the University of Cincinnati to the high school will be provided each day.  Lunch will be provided each day (please note any dietary restrictions in the application).
+</p>
 								</article>
 
 						</div>
@@ -131,7 +84,7 @@
 													USA
 												</li>
 												<li class="icon fa-phone">
-													(000) 000-0000
+													513-556-4307
 												</li>
 												<li class="icon fa-envelope">
 													<a href="#">Rebekah.Michael@uc.edu</a>
@@ -149,7 +102,22 @@
 						</ul>
 					</div>
 				</section>
+				<section>
+				<h1>Location</h1>
+				<br>
+				<div id="map" style="width:400px;height:400px;background:yellow"></div>
 
+				<script>
+					function myMap() {
+						var mapOptions = {
+						center: new google.maps.LatLng(39.129774, -84.520274), zoom: 10, mapTypeId: google.maps.MapTypeId.HYBRID
+						}
+					var map = new google.maps.Map(document.getElementById("map"), mapOptions);
+					}
+				</script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAfDYAC7e3K0qR9G5NB5NUZZx28KnP45I&callback=myMap"></script>
+				</section>
 		</div>
 
 		<!-- Scripts -->
