--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
 											}
 										</script>
 									<h3>What we do</h3>
-									<p>DITLE is a strategic educational initiative by the University of Cincinnati (UC) to prepare Cincinnati high school students for post‐secondary education and careers in Information Technology. The program is funded by the National Science Foundation and is implemented by a collaborative effort between UC’s School of Information Technology, UC’s School of Education, and partner high schools in the Cincinnati area.
-                                       The DITLE Summer program is a 3 week intensive summer IT day camp designed to give students a solid foundation in computer fundamentals, computer application development, database and networking concepts. The program is a hands on, project based, team oriented learning experience at the University of Cincinnati campus using UC state of the art equipment and instructors.
-                                       This program is offered at no charge to students.  All materials and equipment will be provided.  Transportation from the participating high school to the University of Cincinnati and back from the University of Cincinnati to the high school will be provided each day.  Lunch will be provided each day (please note any dietary restrictions in the application).
+									<p>DITLE is a strategic educational initiative by the University of Cincinnati (UC) to prepare Cincinnati high school students for post‐secondary education and careers in Information Technology. The program is funded by the National Science Foundation and is implemented by a collaborative effort between UC’s School of Information Technology and partner high schools in the Cincinnati area.
+                                       The DITLE Summer program is a 3 week intensive summer IT day camp designed to give students a solid foundation in computer fundamentals, computer application development, and database and networking concepts. The program is a hands on, project based, team oriented learning experience at the University of Cincinnati campus using UC's state of the art equipment and instructors.
+                                       This program is offered at no charge to students.  All materials, meals, and equipment will be provided.  Transportation to and from the university will also be provided each day. We prepare high school students for a future in IT.
 </p>
 								</article>
 								<article>
