--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
 									</header>
 									<!-- Slideshow container -->
 									<div class="slideshow-container">
-
-  <!-- Full-width images with number and caption text -->
-
 										<div class="mySlides fade">
 											<img src="fieldpic.JPG" style="width:50%">
 											<div class="text">Students play Ultimate Frisbee on the field</div>
@@ -89,7 +86,13 @@
 								<h2>Resources</h2>
 									<p>
 										<div id="linktext">
-											<b><a href="2018UC DITLE Summer Program Application.docx">DITLE Application</a></b>
+											<b><a href="2018UC DITLE Summer Program Application.docx">Printable DITLE Application</a></b>
+											<br>
+											<br>
+											<b><a href="application.html">Online Student Application</a>
+											<br>
+											<br>
+											<b><a href="https://docs.google.com/forms/d/e/1FAIpQLSclUEnOTI2pgWBKnKfYubBlcPoP2C7-QKaz3_AGNfPPPRIRQw/viewform?usp=sf_link">Online Parent Application</a>
 											<br>
 											<br>
 											<b><a href="https://cech.mediaspace.kaltura.com/channel/DITLE%2BPublic/46362191">Previous Presentations</a>
