--- a/application.html
+++ b/application.html
@@ -7,7 +7,9 @@
 		<script src="save.js"></script>
 	</head>
 	<body>
-		<form>
+		<h2 style="padding-left:50px">Application</h2>
+		<h3 style="padding-left:50px">All values must be filled out</h3>
+		<form id ="app">
 			Name: <input type="text" id="name" />
 			<br>
 			Email: <input type="text" id="email" />
