--- a/application.html
+++ b/application.html
@@ -3,7 +3,7 @@
 		<title>DITLE Student Application</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/ditle.css" />
 		<script src="save.js"></script>
 	</head>
 	<body>
