--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <br>
         <h3>My projects:</h3>
         <br>
-        <a href="ditle.html">My DITLE Website</a>
+        <a href="ditle/ditle.html">My DITLE Website</a>
 
         <p>Future plans will go here!</p>
         <br>
