Discord Pages + Testing
Discord Pages added. Testing them to see if they work

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <h3>My projects:</h3>
         <br>
         <a href="ditle/ditle.html">My DITLE Website</a>
-
+        <br>
+        <a href="discord/landing.html">Discord Verify Bot</a>
         <p>Future plans will go here!</p>
         <br>
         <hr>
