Added Discord Rules Quiz
Rules Quiz Beta v1.0 added.
-Banner added to top
-Command added
-Check mark image added
-Questions added
-login.html removed
-landing.html changed

--- a/discord/landing.html
+++ b/discord/landing.html
@@ -12,7 +12,7 @@
         <h2>In order to access the stuff this bot does, you have to access it directly.</h2>
         <br>
         <h3>Sorry :/</h3>
-        <a href="login.html">Test Link</a>
+        <a href="quiz.html">Test Link</a>
 
     </body>
 
