--- a/discord/quiz.html
+++ b/discord/quiz.html
@@ -19,7 +19,7 @@
             }
             div#banner-content { 
               margin: 0 auto; 
-              padding: 10px; 
+              padding: 5px; 
               border: 1px solid lightgray;
               font-size:24px;
               color:gray;
@@ -33,10 +33,13 @@
     <body>
         <div id="banner">
             <div id="banner-content">
-                <p>White Flame of Otarumi Discord</p>
+                <p><img src="logo.png" id="bannerimg" /> White Flame of Otarumi Discord</p>
             </div>
         </div>
         <div id="main">
+            <img src="logo.png" style="width:100px; height:100px;" />
+            <br>
+            <br>
             <h1>Rules Quiz</h1>beta v1.0
             <h2>Answer all questions correctly to be allowed onto the server!</h2>
             <br>
