Renamed things and preparation
- Renamed to "test"
- Preparing for more config options

--- a/discord/quiz.html
+++ b/discord/quiz.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Link your Discord!</title>
+        <title>White Flame Rules Test</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="assets/css/login.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -33,14 +33,14 @@
     <body>
         <div id="banner">
             <div id="banner-content">
-                <p><img src="logo.png" id="bannerimg" /> White Flame of Otarumi Discord</p>
+                <p><img src="logo.png" id="bannerimg" />White Flame of Otarumi Discord</p>
             </div>
         </div>
         <div id="main">
-            <img src="logo.png" style="width:100px; height:100px;" />
+            <img src="logo.png" id="bannerimg" style="width:100px; height:100px;"/>
             <br>
             <br>
-            <h1>Rules Quiz</h1>beta v1.0
+            <h1>Rules Test</h1>Beta v1.3
             <h2>Answer all questions correctly to be allowed onto the server!</h2>
             <br>
             <hr>
