Added Vocations Webpage

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <a href="ditle/ditle.html">My DITLE Website</a>
         <br>
         <a href="discord/landing.html">Discord Verify Bot</a>
+        <br>
+        <a href="vocations/vocations.html">Vocations Project</a>
         <p>Future plans will go here!</p>
         <br>
         <hr>
