--- a/vocations/vocations.html
+++ b/vocations/vocations.html
@@ -47,6 +47,10 @@
 							<li>Don’t try too hard and have fun with the relationship, don’t put more effort in than the other person, if they aren’t putting in the same amount as you then maybe it’s not right </li>
 						</ul>
 					</article>
+					<article>
+						<h2>How to prevent date rape:</h2>
+
+					</article>
 				</section>
 
 				<section id="signs">
@@ -126,15 +130,67 @@
 
 					<h2>The National Sexual Assault Hotline:</h2>
 					<h3>800-656-4273</h3>
+					<a href="resources.html">Additional Resources</a>
 				</section>
 			
 		</div>
 			<!-- Footer -->
 				<section id="footer">
+						<div class="container">
+								<header>
+									<h2>Questions or reports? <strong>Let us know:</strong></h2>
+								</header>
+								<div class="row">
+									<div class="col-6 col-12-medium">
+										<section>
+											<form action="https://formspree.io/aidankovacic@gmail.com"method="POST">
+												<div class="row gtr-50">
+													<div class="col-6 col-12-small">
+														<input name="name" placeholder="Name" type="text" />
+													</div>
+													<div class="col-6 col-12-small">
+														<input name="email" placeholder="Email" type="text" />
+													</div>
+													<div class="col-12">
+														<textarea name="message" placeholder="Message"></textarea>
+													</div>
+													<div class="col-12">
+														<input type="submit" value="Send">
+													</div>
+												</div>
+											</form>
+										</section>
+									</div>
+									<div class="col-6 col-12-medium">
+										<section>
+											<p>Need to report something? Let us know and we'll get back to you with resources to assist you.</p>
+											<br>
+											<div class="row">
+												<div class="col-6 col-12-small">
+													<ul class="icons">
+														<li class="icon fa-home">
+															2421 Amsterdam Rd<br />
+															Villa Hills, KY 41017<br />
+															USA
+														</li>
+														<li class="icon fa-phone">
+															859-907-1668
+														</li>
+														<li class="icon fa-envelope">
+															<a href="#">viadragonz@viadragonz.com</a>
+		
+														</li>
+													</ul>
+												</div>
+											</div>
+										</section>
+									</div>
+								</div>
+							</div>
 				<article>
 					<div id="copyright" class="container">
 						<ul class="links">
-							<li>&copy; Aidan & Co. All rights reserved.</li>
+							<li>&copy; Aidan, Thomas, Caesar & Co. All rights reserved.</li>
 						</ul>
 					</div>
 				</article>
@@ -146,7 +202,8 @@
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
-            <script src="assets/js/main.js"></script>
+			<script src="assets/js/main.js"></script>
+			<script src="save.js"></script>
             <!-- <script src="assets/js/titlebar.js"></script> -->
 
 	</body>
