--- a/vocations/vocations.html
+++ b/vocations/vocations.html
@@ -49,7 +49,15 @@
 					</article>
 					<article>
 						<h2>How to prevent date rape:</h2>
-
+							<ul>
+								<li>Always have your drink in your hand</li>
+								<li>If you leave your drink by accident be sure to get a new one. It’s worth the money.</li>
+								<li>Always go out with friends, never by yourself to ensure your safety</li>
+								<li>If you are drinking alcohol, know your limits and try and keep count of how many drinks you’ve had</li>
+								<li>Always let someone know where you are before you go out and give an ETA as to when you will be back</li>
+								<li>Don't drink with someone you don't know very well</li>
+								<li>Know what hotlines to call when you believe you are in danger.</li>
+							</ul>
 					</article>
 				</section>
 
@@ -81,7 +89,13 @@
 							<li>Using money to control.</li>
 							<li>Constant calling or texting when you are not with him/her.</li>
 							<li>Threatening to commit suicide if you leave.</li>
-							</ul>
+						</ul>
+					<h2>What to do about it</h2>
+						If you believe you are being psychologically abused, let a family member or trusted friend know and work with them to help you.
+						<br>
+						If you believe you are in a dangerous situation,
+						call 911 or the sexual abuse hotline at 800-656-4273. It isn't your fault. Do not stay in a relationship with an abusive partner. 
+						You cannot fix them.
 				</section>
 
 				<section id="harrassment">
