Added additional resources & domestic abuse hotline

--- a/vocations/vocations.html
+++ b/vocations/vocations.html
@@ -94,7 +94,7 @@
 						If you believe you are being psychologically abused, let a family member or trusted friend know and work with them to help you.
 						<br>
 						If you believe you are in a dangerous situation,
-						call 911 or the sexual abuse hotline at 800-656-4273. It isn't your fault. Do not stay in a relationship with an abusive partner. 
+						call 911 or the domestic abuse hotline at 1−800−799−7233. It isn't your fault. Do not stay in a relationship with an abusive partner. 
 						You cannot fix them.
 				</section>
 
@@ -144,6 +144,8 @@
 
 					<h2>The National Sexual Assault Hotline:</h2>
 					<h3>800-656-4273</h3>
+					<h2>National Domestic Abuse Hotline:</h2>
+					<h3>1−800−799−7233 </h3>
 					<a href="resources.html">Additional Resources</a>
 				</section>
 			
