--- a/vocations/resources.html
+++ b/vocations/resources.html
@@ -8,12 +8,21 @@
     </head>
     <body class="no-sidebar is-preload">
         <div id="page-wrapper">
-            <h2>Relationship resources:</h2>
-            <a href="https://www.thehotline.org/healthy-relationships/">Tips for healthy relationships</a>
-            <h2>Sexual Harassment Resources:</h2>
-            <a href="https://www.creditmonkey.com/date-rate-statistics.html">Date rape statistics</a>
-            <a href="https://www.nsvrc.org/node/4737">More date rape statistics</a>
-            <h2>Psychological Abuse Resources:</h2>
-            <h2>Other information:</h2>
+            <section id="resources">
+                <h2>Relationship resources:</h2>
+                <a href="https://www.thehotline.org/healthy-relationships/">Tips for healthy relationships</a>
+                <br>
+                <a href="https://www.loveisrespect.org/healthy-relationships/">Additional advice for healthy relationships</a>
+                <h2>Sexual Harassment Resources:</h2>
+                <a href="https://www.creditmonkey.com/date-rate-statistics.html">Date rape statistics</a>
+                <br>
+                <a href="https://www.nsvrc.org/node/4737">More date rape statistics</a>
+                <br>
+                <a href="https://www.nolo.com/legal-encyclopedia/fighting-sexual-harassment-29532.html">Legal advice on sexual harassment</a>
+                <br>
+                <a href="https://www.goodtherapy.org/blog/psychpedia/date-rape">Date Rape Resources</a>
+                <h2>Psychological Abuse Resources:</h2>
+                <a href="https://www.thehotline.org/">National Domestic Abuse Resources</a>
+            </section>
         </div>
     </body>
