Added Additional Signs of Domestic Abuse

--- a/vocations/resources.html
+++ b/vocations/resources.html
@@ -23,6 +23,8 @@
                 <a href="https://www.goodtherapy.org/blog/psychpedia/date-rape">Date Rape Resources</a>
                 <h2>Psychological Abuse Resources:</h2>
                 <a href="https://www.thehotline.org/">National Domestic Abuse Resources</a>
+                <br>
+                <a href="https://www.healthline.com/health/signs-of-mental-abuse#humiliation-negating-and-criticizing">Additional signs of psychological abuse</a>
             </section>
         </div>
     </body>
