Added details into signs of sexual harassment

--- a/vocations/vocations.html
+++ b/vocations/vocations.html
@@ -121,6 +121,9 @@
 						<li>Sexual phone calls or text</li>
 						<li>Sexual stories, pictures, or videos</li>
 						<li>Sexual looks or gestures</li>
+						<li>Asking for sexual favors</li>
+						<li>Unwelcome sexual advances</li>
+						
 					</ul>
 
 					<h3>What should you do if you are being sexual harrassed?</h3>
