Cleanup and adding additional tips and guides

--- a/vocations/resources.html
+++ b/vocations/resources.html
@@ -21,6 +21,8 @@
                 <a href="https://www.nolo.com/legal-encyclopedia/fighting-sexual-harassment-29532.html">Legal advice on sexual harassment</a>
                 <br>
                 <a href="https://www.goodtherapy.org/blog/psychpedia/date-rape">Date Rape Resources</a>
+                <br>
+                <a href="https://kidshealth.org/en/teens/date-rape.html">Additional Date Rape Resources</a>
                 <h2>Psychological Abuse Resources:</h2>
                 <a href="https://www.thehotline.org/">National Domestic Abuse Resources</a>
                 <br>
