--- a/vocations/vocations.html
+++ b/vocations/vocations.html
@@ -16,7 +16,7 @@
 					<div id="navbar">
 						<a href='#home'><u>Home</u></a>
 						<a href='#practice'><u>Dating Practices</u></a>
-						<a href='#signs'><u>Warning Signs</u></a>
+						<a href='#signs'><u>Abuse</u></a>
 						<a href='#harrassment'><u>Harrassment</u></a>
 					</div>
 					<div class="container">
@@ -35,6 +35,7 @@
 					<br>
 					<br>
 					<br>
+					<br>
 					<img src='couple.jpg' alt="happy couple" style="width:700px;height:300px">
 					<br>
 					<h2>Safe Dating Practices</h2>
@@ -45,10 +46,19 @@
 							<li>Make them for the other person</li>
 							<li>Ups and downs are a normal thing. Don’t panic but know when the downs are too much</li>
 							<li>Don’t try too hard and have fun with the relationship, don’t put more effort in than the other person, if they aren’t putting in the same amount as you then maybe it’s not right </li>
+							<li>Know the signs of a dying relationship and be prepared to </li>
+							<li>Always let someone know when you are going out on a date. If it goes sour, you will have someone to help.</li>
+							<li>Enjoy each other's company! If you aren't, why are you dating?</li>
 						</ul>
 					</article>
 					<article>
-						<h2>How to prevent date rape:</h2>
+						<h2>What is date rape?</h2>
+							Date rape refers to when someone has nonconsensual sexual intercourse with someone they are in a romantic relationship with. 
+							<br>
+							This is commonly done through date rape drugs being sneakily placed into drinks in order to make the victim less aware of their surroundings.
+					</article>
+					<article>
+						<h2>Steps for preventing date rape:</h2>
 							<ul>
 								<li>Always have your drink in your hand</li>
 								<li>If you leave your drink by accident be sure to get a new one. It’s worth the money.</li>
@@ -90,11 +100,16 @@
 							<li>Constant calling or texting when you are not with him/her.</li>
 							<li>Threatening to commit suicide if you leave.</li>
 						</ul>
-					<h2>What to do about it</h2>
+					<h2>What to do about psychological abuse</h2>
 						If you believe you are being psychologically abused, let a family member or trusted friend know and work with them to help you.
+						<br>
+						The cycle of abuse is nearly impossible to break. Do not believe that your partner "getting better" will be permanent.
 						<br>
 						If you believe you are in a dangerous situation,
 						call 911 or the domestic abuse hotline at 1−800−799−7233. It isn't your fault. Do not stay in a relationship with an abusive partner. 
+						<br>
+						You are not responsible for their mental health problems. You are not responsible for repairing their life.
+						<br>
 						You cannot fix them.
 				</section>
 
@@ -110,7 +125,8 @@
 						<li>52.4% of male victims report being raped by an acquaintance and 15.1% by a stranger </li>
 						<li>Almost half (49.5%) of multiracial women and over 45% of American Indian/Alaska Native women were subjected to some form of contact sexual violence in their lifetime </li>
 						<li>91% of victims of rape and sexual assault are female, and nine percent are male </li>
-						<li>In eight out of 10 cases of rape, the victim knew the perpetrator Eight percent of rapes occur while the victim is at work</li>
+						<li>In eight out of 10 cases of rape, the victim knew the perpetrator</li>
+						<li>Eight percent of rapes occur while the victim is at work</li>
 						<li>The lifetime cost of rape per victim is $122,461 </li>
 						<li>Annually, rape costs the U.S. more than any other crime ($127 billion), followed by assault ($93 billion), murder ($71 billion), and drunk driving, including fatalities ($61 billion)</li>
 					</ul>
@@ -123,26 +139,15 @@
 						<li>Sexual looks or gestures</li>
 						<li>Asking for sexual favors</li>
 						<li>Unwelcome sexual advances</li>
-						
+
 					</ul>
 
-					<h3>What should you do if you are being sexual harrassed?</h3>
+					<h3>What should you do if you are being sexually harrassed?</h3>
 					<ul>
 						<li>Indicate CLEARLY that you are uncomfortable with the behaviour. Say NO effectively and emphatically. It is more important to be firm than polite. If you are more comfortable not speaking to the perpetrator face to face, send an SMS or email. This message and the perpetrator’s reply may also be used as evidence.</li>
 						<li>Collect evidence – Start a log and note down dates, times, places and who was present at the time of the incidents and give detailed accounts of the unwelcomed sexual behaviour.</li>
 						<li>Keep any email or SMS correspondence with the harasser as evidence. Taped evidence is also useful.</li>
 						<li>Alert or inform someone whom you trust at the workplace of the harassment. Talk to friends or family members that you trust about the incident. Even if they were not present at the harassment scene, they may be able to support your case as witnesses.</li>
-					</ul>
-					<br>
-					<h3>What to do if you are being sexually harrassed</h3>
-					<ul>
-						<li>Indicate CLEARLY that you are uncomfortable with the behaviour. Say NO effectively and emphatically. It is more important to be firm than polite. If you are more comfortable not speaking to the perpetrator face to face, send an SMS or email. This message and the perpetrator’s reply may also be used as evidence.</li>
-						<li>
-						Collect evidence – Start a log and note down dates, times, places and who was present at the time of the incidents and give detailed accounts of the unwelcomed sexual behaviour.</li>
-						<li>
-						Keep any email or SMS correspondence with the harasser as evidence. Taped evidence is also useful.</li>
-						<li>
-						Alert or inform someone whom you trust at the workplace of the harassment. Talk to friends or family members that you trust about the incident. Even if they were not present at the harassment scene, they may be able to support your case as witnesses.</li>
 					</ul>
 
 					<h2>The National Sexual Assault Hotline:</h2>
