Added key signs of abuse

--- a/vocations/vocations.html
+++ b/vocations/vocations.html
@@ -100,6 +100,35 @@
 							<li>Constant calling or texting when you are not with him/her.</li>
 							<li>Threatening to commit suicide if you leave.</li>
 						</ul>
+					<h2>Key signs of abuse</h2>
+					An abusive relationship isn’t just limited to physical violence. It can include sexual, emotional and physical abuse, and may involve control of your finances. Here are some signs to look for.
+					<br>
+						<ul>
+							<li>
+							They check on you all the time to see where you are, what you're doing and who you're with.</li>
+							<li>
+							They try to control where you go and who you see, and get angry if you don't do what they say.</li>
+							<li>
+							They accuse you of being unfaithful or flirting.</li>
+							<li>
+							They isolate you from family and friends, often by behaving rudely to them.</li>
+							<li>
+							They put you down, either publicly or privately, by attacking your intelligence, looks, mental health or capabilities.</li>
+							<li>
+							They constantly compare you unfavourably to others.</li>
+							<li>
+							They blame you for all the problems in your relationship, and for their violent outbursts.</li>
+							<li>
+							They say things like, 'No one else will want you.'</li>
+							<li>
+							They yell or sulk, and deliberately break things that you value.</li>
+							<li>
+							They threaten to use violence against you, your family, friends or a pet.</li>
+							<li>
+							They push, shove, hit or grab you, or make you have sex or do things you don't want to do.</li>
+							<li>
+							They harm you, your pets or your family members.</li>
+						</ul>
 					<h2>What to do about psychological abuse</h2>
 						If you believe you are being psychologically abused, let a family member or trusted friend know and work with them to help you.
 						<br>
