Cleanup on key signs of abuse

--- a/vocations/vocations.html
+++ b/vocations/vocations.html
@@ -101,7 +101,9 @@
 							<li>Threatening to commit suicide if you leave.</li>
 						</ul>
 					<h2>Key signs of abuse</h2>
-					An abusive relationship isn’t just limited to physical violence. It can include sexual, emotional and physical abuse, and may involve control of your finances. Here are some signs to look for.
+					An abusive relationship isn’t just limited to physical violence. It can include sexual, emotional and physical abuse, and may involve control of your finances. 
+					<br>
+					Here are some signs to look for.
 					<br>
 						<ul>
 							<li>
